fix: script for update id type of groupes #5901
Following the evolution of the data model, the type ids of the existing groups have not been updated, which has created relationship problems with the new groups

fix issue #5901

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -207,6 +207,10 @@ services:
         tags:
             -  { name: console.command }
         arguments: ["@monolog.logger.request","@doctrine.orm.entity_manager" , '@service_container', '@mailer']
+    sesile.command.update_classeur_type_of_group:
+        class: Sesile\UserBundle\Command\UpdateClasseurTypeOfGroup
+        tags:
+            -  { name: console.command }
     Sesile\ClasseurBundle\Service\ActionMailer:
         autowire: true
         autoconfigure: true
