feat: update readme
- Move composer github token config to auth json file

--- a/auth.json.dist
+++ b/auth.json.dist
@@ -1,8 +1,11 @@
 {
-  "http-basic": {
-    "www.setasign.com": {
-      "username": "username@gmail.com",
-      "password": "mdp"
+    "http-basic": {
+        "www.setasign.com": {
+            "username": "username@gmail.com",
+            "password": "mdp"
+        }
+    },
+    "github-oauth": {
+        "github.com": "OAuth-token"
     }
-  }
 }
